<resources>
    <string name="app_name">BUNYAN</string>
    <string name="colors">Colors</string>
    <string name="titles_labels">Titles and Labels</string>
    <string name="provide_text">Provide a text</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="progress_text">Progress Text </string>
    <string name="cancel_text">Cancel Button Text</string>
    <string name="camera_button_text">Camera Button Text</string>
    <string name="gallery_button_text">Gallery Button Text</string>
    <string name="background_color">Dialog Background Color</string>
    <string name="title_color">Dialog Title Color</string>
    <string name="button_text_color">Buttons Text Color</string>
    <string name="cancel_text_color">Cancel Text Color</string>
    <string name="progress_text_color">Progress Text Color</string>

    <string name="additional_customization">Additional Customization</string>
    <string name="flip_image">Flip image after shot</string>
    <string name="colored_icons">Colored icons</string>
    <string name="max_image_size">Max image size</string>
    <string name="dim_amount">Dim amount behind the dialog</string>
    <string name="use_system_dialog">Use system dialog</string>
    <string name="providers">Providers</string>
    <string name="buttons_orientation">Buttons orientation</string>
    <string name="icon_gravity">Icon gravity</string>
    <string name="tip">Press on the box below to pick an image!</string>

    <string name="key_text_preference_group">key_text_preference_group</string>
    <string name="key_additional_preference_group">key_additional_preference_group</string>
    <string name="key_dialog_title">key_dialog_title</string>
    <string name="key_progress_text">key_progress_text</string>
    <string name="key_cancel_text">key_cancel_text</string>
    <string name="key_camera_button_text">key_camera_button_text</string>
    <string name="key_gallery_button_text">key_gallery_button_text</string>
    <string name="key_background_color">key_background_color</string>
    <string name="key_title_color">key_title_color</string>
    <string name="key_cancel_text_color">key_cancel_text_color</string>
    <string name="key_button_text_color">key_button_text_color</string>
    <string name="key_progress_text_color">key_progress_text_color</string>
    <string name="key_flip_image">key_flip_image</string>
    <string name="key_colored_icons">key_colored_icons</string>
    <string name="key_dim_amount">key_dim_amount</string>
    <string name="key_system_dialog">key_system_dialog</string>
    <string name="key_max_image_size">key_max_image_size</string>
    <string name="key_providers">key_providers</string>
    <string name="key_buttons_orientation">key_buttons_orientation</string>
    <string name="key_icon_gravity">key_icon_gravity</string>
    <string name="complete_the_form_to_sign_up">complete</string>
    <string name="username">username</string>
    <string name="user_name">User Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="Organization">organization</string>
    <string name="Volunteer">volunteer</string>
    <string name="Signup">sign up</string>
    <string name="email">Email</string>
    <string name="already_signup">Already signup ?</string>
    <string name="login">Login</string>
    <string name="complete">Complete the form to sign up</string>
    <string name="save">Save</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="mb2">btnhome</string>
    <string name="mb3">btnmsg</string>
    <string name="mb1">btnusr</string>
    <string name="add_advertisement">Add Advertisement</string>
    <string name="help_support">Help_Support</string>
    <string name="new_advertisement">New Advertisement</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="uupload">Upload Picture</string>
    <string name="locate">Location</string>
    <string name="submt">Submit</string>
    <string name="hint_email">hint_email</string>
    <string name="emailchange">Email</string>
    <string name="confirmp">Confirm</string>
    <string name="error_valid_email_password">creaate</string>
    <string name="passwordconfirm">Password</string>
    <string name="confirm_password2">Confirm password</string>
    <string name="reset">Reset</string>
    <string name="reseet1">Reseet</string>
    <string name="Dear_user">Dear User , If there any problems please feel free to send email and we will contact with you as soon as possible.</string>
    <string name="your_email">Your Email</string>
    <string name="send">Send</string>
    <string name="describe">Describe your problem</string>

    <string name="bt_form_hint_card_number">Card Number</string>
    <string name="bt_form_hint_expiration">Expiration Date</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_cardholder_name">Cardholder Name</string>
    <string name="bt_form_hint_postal_code">Postal Code</string>
    <string name="bt_form_hint_country_code">Country Code</string>
    <string name="bt_form_hint_mobile_number">Mobile Number</string>

    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_month">Month</string>
    <string name="bt_year">Year</string>

    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="bt_cvv_required">%s is required</string>
    <string name="bt_cvv_invalid">%s is invalid</string>
    <string name="bt_expiration_required">Expiration date is required</string>
    <string name="bt_expiration_invalid">Expiration date is invalid</string>
    <string name="bt_cardholder_name_required">Cardholder name is required</string>
    <string name="bt_postal_code_required">Postal code is required</string>
    <string name="bt_country_code_required">Country code is required</string>
    <string name="bt_mobile_number_required">Mobile number is required</string>
    <string name="label_buy_now">Buy Now</string>
    <string name="description">Description</string>
    <string name="phone_number">Phone No</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
    <string name="message">Message</string>
    <string name="sends">SEND</string>
    <string name="to">To</string>
</resources>
