<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".act.Send_Message">

    <EditText
        android:id="@+id/etRecipient"
        android:hint="@string/to"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:hint="@string/message"
        android:gravity="start"
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:imeOptions="actionDone"
        android:layout_height="246dp" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6c27da"
        android:text="@string/sends"
        android:textColor="#fff" />

</LinearLayout>