<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="207dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/tip"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/addphoto"
                android:minWidth="200dp"
                android:minHeight="150dp"
                android:padding="5dp"
                android:scaleType="centerInside" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="720dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp">


        <EditText
            android:id="@+id/usernameup"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="271dp"
            android:drawableLeft="@drawable/userrname"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/emailup"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernamee"
            android:layout_alignLeft="@+id/usernamee"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-6dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="59dp"
            android:layout_marginRight="59dp"
            android:layout_marginBottom="357dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />


        <EditText
            android:id="@+id/phoneeup"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="368dp"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/passup"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="414dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/cpassup"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="57dp"
            android:layout_marginBottom="207dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/bttnediteup"
            android:layout_width="275dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="73dp"
            android:layout_marginBottom="155dp"
            android:background="@drawable/orgbtn"
            android:text="@string/save"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/Id"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="218dp"
            android:layout_marginRight="218dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>